Publish job_norm update