@@ -4,11 +4,13 @@ import com.backend.matching_service.dto.ingest.CvNormUpdatedEvent;
 import com.backend.matching_service.dto.ingest.JobNormUpdatedEvent;
 import com.backend.matching_service.repository.CvNormSnapshotRepository;
 import com.backend.matching_service.repository.JobNormSnapshotRepository;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.OffsetDateTime;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -23,19 +25,26 @@ public class NormSnapshotIngestService {
      * Ingest CV_NORM event -> upsert cv_norm_snapshot
      */
     public void upsertCv(CvNormUpdatedEvent event) {
+        if (event == null || event.getCvId() == null) {
+            throw new IllegalArgumentException("CvNormUpdatedEvent is null or missing cvId");
+        }
+        if (event.getStudentId() == null) {
+            throw new IllegalArgumentException("CvNormUpdatedEvent missing studentId for cvId=" + event.getCvId());
+        }
+
+        OffsetDateTime updatedAt = event.getUpdatedAt() != null ? event.getUpdatedAt() : OffsetDateTime.now();
+
         cvRepo.upsert(
                 event.getCvId(),
                 event.getStudentId(),
-                toJson(event.getSkillsNorm()),
-                toJson(event.getExperienceAreas()),
-                toJson(event.getExperienceTitles()),
+                toJsonOrThrow(event.getSkillsNorm()),
+                toJsonOrThrow(event.getExperienceAreas()),
+                toJsonOrThrow(event.getExperienceTitles()),
                 event.getEducationLevel(),
-                toJson(event.getEducationMajors()),
+                toJsonOrThrow(event.getEducationMajors()),
                 event.getYearsTotal(),
                 event.getModelVersion(),
-                event.getUpdatedAt() != null
-                        ? event.getUpdatedAt()
-                        : OffsetDateTime.now()
+                updatedAt
         );
     }
 
@@ -43,32 +52,50 @@ public class NormSnapshotIngestService {
      * Ingest JOB_NORM event -> upsert job_norm_snapshot
      */
     public void upsertJob(JobNormUpdatedEvent event) {
+        if (event == null || event.getInternshipPostId() == null) {
+            throw new IllegalArgumentException("JobNormUpdatedEvent is null or missing internshipPostId");
+        }
+
+        OffsetDateTime updatedAt = event.getUpdatedAt() != null ? event.getUpdatedAt() : OffsetDateTime.now();
+
         jobRepo.upsert(
                 event.getInternshipPostId(),
                 event.getCompanyId(),
-                toJson(event.getSkillsNorm()),
-                toJson(event.getExperienceAreas()),
-                toJson(event.getExperienceTitles()),
+                toJsonOrThrow(event.getSkillsNorm()),
+                toJsonOrThrow(event.getExperienceAreas()),
+                toJsonOrThrow(event.getExperienceTitles()),
                 event.getEducationLevel(),
-                toJson(event.getEducationMajors()),
+                toJsonOrThrow(event.getEducationMajors()),
                 event.getMinYears(),
                 event.getWorkMode(),
                 event.getLocationLat(),
                 event.getLocationLon(),
-                event.getUpdatedAt() != null
-                        ? event.getUpdatedAt()
-                        : OffsetDateTime.now()
+                updatedAt
         );
     }
 
     /**
-     * Safe convert List -> JSON string
+     * Convert List<String> -> JSON array string safely.
+     * - Default: throw if serialization fails (recommended to avoid silently losing data)
      */
-    private String toJson(List<String> data) {
+    private String toJsonOrThrow(List<String> data) {
         try {
-            return objectMapper.writeValueAsString(
-                    data == null ? List.of() : data
-            );
+            List<String> safe = (data == null) ? Collections.emptyList() : data;
+            return objectMapper.writeValueAsString(safe);
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException("Failed to serialize list to JSON", e);
+        }
+    }
+
+    /**
+     * If you prefer "never fail ingest", you can use this fallback version instead.
+     * (Not recommended during dev because it can hide bugs.)
+     */
+    @SuppressWarnings("unused")
+    private String toJsonOrEmpty(List<String> data) {
+        try {
+            List<String> safe = (data == null) ? Collections.emptyList() : data;
+            return objectMapper.writeValueAsString(safe);
         } catch (Exception e) {
             return "[]";
         }
